<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_contact_management"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/contact_management" />
        <item
            android:id="@+id/nav_order_management"
            android:icon="@drawable/ic_local_shipping_black_24dp"
            android:title="@string/order_management" />
        <item
            android:id="@+id/nav_order_statistics"
            android:icon="@drawable/ic_poll_black_24dp"
            android:title="@string/order_statistics" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/messagecenter_title" />
        <item
            android:id="@+id/nav_sysseting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/syssetting_title" />
    </group>

</menu>
